Add some styling to structure the form
Added flexbox and additional text to structure the shape of the form.

--- a/index.html
+++ b/index.html
@@ -7,21 +7,44 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div>
-    <div></div>
-    <div></div>
+  <div class="background">
+    <!-- <img src="images/halie-west-bgr.jpg" alt="image of trees"> -->
+    <div class="logo">
+      <img src="images/odin-lined (1).png" alt="odin-logo">
+      <span>odin</span>
+    </div>
+    <div class="credits"></div>
   </div>
-  <div>
-    <div></div>
+  <div class="form">
+    <div class="description">
+      <p>This is not a real online service! You know you need something like this in your life to help you realise your deepest dreams. Sign up <em>now</em> to get started.</p>
+      <p>You <em>know</em> you want to.</p>
+    </div>
     <form action="" class="" method="post">
       <fieldset>
-        <input type="text" name="" id="">
-        <input type="text" name="" id="">
-        <input type="email" name="" id="">
-        <input type="tel" name="" id="">
-        <input type="password" name="" id="" required>
-        <input type="password" name="" id="" required>
+        <label for="first-name">First Name
+          <input type="text" name="first-name" id="first-name">
+        </label>
+        <label for="last-name">Last Name
+          <input type="text" name="last-name" id="last-name">
+        </label>
+        <label for="email">Email
+          <input type="email" name="email" id="email">
+        </label>
+        <label for="phone-number">Phone number
+          <input type="tel" name="phone-number" id="phone-number">
+        </label>
+        <label for="password">Password
+          <input type="password" name="password" id="password" required>
+        </label>
+        <label for="pass-check">Confirm Password
+          <input type="password" name="pass-check" id="pass-check" required>
+        </label>
       </fieldset>
+      <div>
+        <button type="submit">Create Account</button>
+        <p>Already have an account?<a href="">Log in</a></p>
+      </div>
     </form>
   </div>
 </body>
