--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
       <p>You <em>know</em> you want to.</p>
     </div>
     <form action="" class="" method="post">
-      <fieldset>
-        <label for="first-name">First Name
+      <h2>Let's do this!</h2>
+      <div class="fieldset">
+        
+        <div>
+          <label for="first-name">First Name</label>
           <input type="text" name="first-name" id="first-name">
-        </label>
+        </div>
+
+
         <label for="last-name">Last Name
           <input type="text" name="last-name" id="last-name">
         </label>
@@ -40,7 +45,7 @@
         <label for="pass-check">Confirm Password
           <input type="password" name="pass-check" id="pass-check" required>
         </label>
-      </fieldset>
+      </div>
       <div>
         <button type="submit">Create Account</button>
         <p>Already have an account?<a href="">Log in</a></p>
